fix: realizando ajustes

--- a/src/components/SwiperPartners/stylesSwiperPartners.css
+++ b/src/components/SwiperPartners/stylesSwiperPartners.css
@@ -2,12 +2,14 @@
   width: 50%;
 }
 
-.swiper-slide {
+.mySwiperPartner .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
 
   /* Center slide text vertically */
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
