--- a/src/components/SwiperPartners/stylesSwiperPartners.css
+++ b/src/components/SwiperPartners/stylesSwiperPartners.css
@@ -2,6 +2,12 @@
   padding: 50px;
 }
 
+@media (max-width: 1080) {
+  .mySwiperPartner {
+    padding: 0 50px;
+  }
+}
+
 .mySwiperPartner .swiper-slide {
   text-align: center;
   font-size: 18px;
